# embassy-rp-template

./: Cargo.toml
