[package]
name = "embassy-rp-template"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
embassy-executor = {version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]}
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = "0.4.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
critical-section = "1.2.0"
embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
heapless = "0.8.0"
rand_core = "0.6.4"
rand = { version = "0.8.5", default-features = false }
